--- a/css/default.css
+++ b/css/default.css
@@ -29,3 +29,24 @@ body{
     overflow: hidden;
     height: 100%;
 }
+.actions{
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.actions>button{
+    padding: 10px;
+    margin: 5px;
+    background: #ddd;
+    border: none;
+    border-radius: 20%;
+}
+.actions > button.active{
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9)
+}
+.actions > button:focus{
+    outline: none;
+}
